# mot-data-wrangling

./: .env.sample  .gitignore  README.md  justfile  pyproject.toml
data/: .gitignore
docs/: example_bulk_response.json
src/mot_data/: paths.py
src/mot_data/dvsa_mot_history_api/: __init__.py  api_client.py  cli.py  zip_to_parquet.py
src/mot_history/: api_client.py  cli.py  paths.py  zip_to_parquet.py
tests/: test_dvsa_mot_history_api.py
