[project]
name = "mot-data"
version = "0.1.0"
description = "A collection of tools to work with MOT data from various of sources."
readme = "README.md"
authors = [
    { name = "James Thomas", email = "j.thomas@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "duckdb>=1.1.3",
    "environs>=11.2.1",
    "oauthlib>=3.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "rust-just>=1.38.0",
    "types-oauthlib>=3.2.0.20240806",
    "types-requests>=2.32.0.20241016",
    "types-requests-oauthlib>=2.0.0.20240417",
]

[project.scripts]
dvsa-mot-history-api = "mot_data.dvsa_mot_history_api.cli:cli"

[tool.ruff]
line-length = 100
